@@ -1,3 +1,4 @@
+### BTest baseline data generated by btest-diff. Do not edit. Use "btest -U/-u" to update. Requires BTest >= 0.63.
 barnyard2
 broker
 capture_loss
@@ -59,6 +60,7 @@ syslog
 traceroute
 tunnel
 unified2
+unknown_protocols
 weird
 weird_stats
 x509
