@@ -1,3 +1,4 @@
+### BTest baseline data generated by btest-diff. Do not edit. Use "btest -U/-u" to update. Requires BTest >= 0.63.
 PacketDemo::Bar - Demo packet analyzers (RawLayer, LLC). (dynamic, version 1.0.0)
     [Packet Analyzer] LLC_Demo (ANALYZER_LLC_DEMO)
     [Packet Analyzer] Raw_Layer (ANALYZER_RAW_LAYER)
